--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@
 
 title: Data Futures Pilot
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The Data Futures pilot is a new way to invest in innovation, transformation, and 
+  modernization at the U.S. Census Bureau. Using a phase-based approach, our goal 
+  is to produce results-driven funding for data innovation projects.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
