--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
-gtm_id: 12345
+gtm_id: G-88V76T6PTX
 
 # Exclude from processing.
 # The following items will not be processed, by default.
